--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcc 'PH'
 - !lcsh 'Fiction'
 - !lcsh 'Short stories'
+- GITenberg
 tableOfContents: Haukansilmä -- Kivisydän -- Wituh.
 title: 'Kaukaisesta lännestä: Kolme kertomusta'
 url: http://www.gutenberg.org/ebooks/35869
